--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -10,6 +10,7 @@
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
                 <a id="logBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Logger</a>
                 <a id="mailBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mailer</a>
+                <a id="grpcBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test gRPC</a>
 
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
@@ -40,6 +41,7 @@
     let authBrokerBtn = document.getElementById("authBrokerBtn");
     let logBrokerBtn = document.getElementById("logBrokerBtn");
     let mailBrokerBtn = document.getElementById("mailBrokerBtn");
+    let grpcBtn = document.getElementById("grpcBtn");
 
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
@@ -110,6 +112,41 @@
                 output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
             } else {
                 output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Error: " + error;
+        })
+    })
+
+    grpcBtn.addEventListener("click", function() {
+        const payload = {
+           action: "log",
+           log: {
+            name: "event",
+            data: "some kind of grpc data",
+           }
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers,
+        }
+
+        fetch("http:\/\/localhost:8080/log-grpc", body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4)
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
+            } else {
+                output.innerHTML += `<br><strong>Response from grpc service</strong>: ${data.message}`;
             }
         })
         .catch((error) => {
